Добавлен Dockerfile и requirements.txt для контейнеризации проекта, настроен запуск Django в Docker

--- a/clients/templates/clients/client_form.html
+++ b/clients/templates/clients/client_form.html
@@ -11,26 +11,38 @@
     <form method="post" novalidate>
         {% csrf_token %}
         {{ form.non_field_errors }}
+
         <div class="mb-3">
             {{ form.name.label_tag }} 
             {{ form.name }}
             {{ form.name.errors }}
         </div>
+
         <div class="mb-3">
             {{ form.phone.label_tag }} 
             {{ form.phone }}
             {{ form.phone.errors }}
         </div>
+
         <div class="mb-3">
             {{ form.email.label_tag }} 
             {{ form.email }}
             {{ form.email.errors }}
         </div>
+
         <div class="mb-3">
             {{ form.address.label_tag }} 
             {{ form.address }}
             {{ form.address.errors }}
         </div>
+
+        <!-- Добавляем блок для поля city -->
+        <div class="mb-3">
+            {{ form.city.label_tag }} 
+            {{ form.city }}
+            {{ form.city.errors }}
+        </div>
+
         <button type="submit" class="btn btn-primary">Сохранить</button>
         <a href="{% url 'client_list' %}" class="btn btn-secondary">Отмена</a>
     </form>
