--- a/clients/templates/clients/client_list.html
+++ b/clients/templates/clients/client_list.html
@@ -15,6 +15,7 @@
                 <th>Телефон</th>
                 <th>Email</th>
                 <th>Адрес</th>
+                <th>Город</th> <!-- Добавил колонку "Город" -->
                 <th>Редактирование</th>
             </tr>
         </thead>
@@ -25,12 +26,13 @@
                 <td>{{ client.phone }}</td>
                 <td>{{ client.email }}</td>
                 <td>{{ client.address }}</td>
+                <td>{{ client.city }}</td> <!-- Выводим город -->
                 <td>
                     <a href="{% url 'client_edit' client.pk %}" class="btn btn-sm btn-primary">Редактировать</a>
                 </td>
             </tr>
             {% empty %}
-            <tr><td colspan="5">Нет клиентов</td></tr>
+            <tr><td colspan="6">Нет клиентов</td></tr>
             {% endfor %}
         </tbody>
     </table>
